--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^1.0.2",
+        "flowbite": "^1.6.5",
+        "flowbite-vue": "^0.0.10",
         "vue3-touch-events": "^4.1.2"
     }
 }
